--- a/style.css
+++ b/style.css
@@ -3,3 +3,53 @@
     margin: 0;
     padding: 0;   
 }
+
+body{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    background-color:  hsl(0, 0%, 8%)
+    ;
+    text-align: center;
+    color: hsl(0, 0%, 100%);
+}
+
+img{ 
+    border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%;
+    width: 30%;
+}
+
+section{
+    background-color:  hsl(0, 0%, 12%);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    margin: 50px 20px;
+    padding: 20px;
+}
+
+section header p:first-of-type{
+    color:  hsl(75, 94%, 57%);
+
+}
+
+.link div{
+    background-color:  hsl(0, 0%, 20%);
+    margin: 8px 0;
+    padding: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    font-weight: 600;
+}
+
+p{
+    font-size: 14px;
+    
+}
+
